Bug 333234 - Grid subdivisions should disappear when zoomed out
Summary: Grid subdivisions should disappear when zoomed out
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 2.8.1
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-09 16:58 UTC by elbarto
Modified: 2014-05-10 09:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description elbarto 2014-04-09 16:58:27 UTC
If you have a small grid and you zoom out too far, the grid covers the image.  If you're zoomed out so that the grid is small enough to obscure the image, then the image itself is more important than the grid at that point, and the grid should be hidden.  Preferably, if you're using subdivisions, the subdivisions should be removed first.

Reproducible: Always

Steps to Reproduce:
1. Turn the zoom factor up to 2000%
2. Select the 1x1 grid in the View -> Grid Spacing menu
3. Zoom back down to 100%
Actual Results:  
As you zoom back out, the grid becomes indistinct enough to be basically useless, and then starts to obscure the actual image.

Expected Results:  
Grid lines should disappear before they get to the point where they obscure the image.  If the user is using grid subdivisions, the subdivisions should disappear first.
Comment 1 Halla Rempt 2014-05-03 10:02:36 UTC
Yes, I agree.
Comment 2 Dmitry Kazakov 2014-05-05 12:15:41 UTC
Git commit 767db4f2e065103494b7e3e12664bdaba556dda8 by Dmitry Kazakov.
Committed on 05/05/2014 at 12:14.
Pushed by dkazakov into branch 'master'.

Fix painting Grid on lower zoom levels

M  +30   -11   krita/ui/canvas/kis_grid_manager.cpp
M  +1    -2    krita/ui/canvas/kis_qpainter_canvas.cpp

http://commits.kde.org/calligra/767db4f2e065103494b7e3e12664bdaba556dda8
Comment 3 Halla Rempt 2014-05-10 09:10:19 UTC
Git commit cb7e236ba8ad3db7685ad3a65a2c2255747dee39 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 05/05/2014 at 12:14.
Pushed by rempt into branch 'calligra/2.8'.

Fix painting Grid on lower zoom levels

M  +30   -11   krita/ui/canvas/kis_grid_manager.cpp
M  +1    -2    krita/ui/canvas/kis_qpainter_canvas.cpp

http://commits.kde.org/calligra/cb7e236ba8ad3db7685ad3a65a2c2255747dee39