Fix painting Grid on lower zoom levels

BUG:333234